# lucky-contracts

./: .gitignore  README.md
ink/: Cargo.toml  README.md
ink/artifacts/: dapps_staking_developer.contract  dapps_staking_developer.json  dapps_staking_developer.wasm  lucky_raffle.contract  lucky_raffle.json  lucky_raffle.wasm  raffle_consumer.contract  raffle_consumer.json  raffle_consumer.wasm  random_generator.contract  random_generator.json  random_generator.wasm  reward_manager.contract  reward_manager.json  reward_manager.wasm
ink/artifacts/raffle_consumer/: raffle_consumer.contract  raffle_consumer.wasm
ink/artifacts/raffle_consumer/v2.0.0/: raffle_consumer.contract  raffle_consumer.wasm
ink/artifacts/raffle_consumer/v3.0.0/: raffle_consumer.contract  raffle_consumer.json  raffle_consumer.wasm
ink/contracts/dapps_staking_developer/: Cargo.toml  lib.rs
ink/contracts/lucky_raffle/: Cargo.toml  lib.rs
ink/contracts/raffle_consumer/: Cargo.toml  lib.rs
ink/contracts/random_generator/: Cargo.toml  lib.rs
ink/contracts/reward_manager/: Cargo.toml  lib.rs
ink/integration_tests/: Cargo.toml  lib.rs
ink/last_verified_artifacts/dapps_staking_developer/: bundle.contract  contract.wasm
ink/last_verified_artifacts/lucky_raffle/: bundle.contract
ink/last_verified_artifacts/random_generator/: contract.json  contract.wasm
ink/last_verified_artifacts/reward_manager/: contract.wasm
ink/last_verified_artifacts/reward_manager_V1_2_0/: bundle.contract  contract.json  contract.wasm
ink/last_verified_artifacts/reward_manager_v1_1_0/: bundle.contract  contract.json  contract.wasm
ink/logics/: Cargo.toml
ink/logics/tests/: participant_manager.rs  psp22_reward.rs  raffle.rs  random_generator.rs
ink/logics/traits/: error.rs  mod.rs  participant_manager.rs  raffle.rs  random.rs  random_generator.rs
ink/logics/traits/participant_filter/: filter_latest_winners.rs  mod.rs  participant_filter.rs
ink/logics/traits/reward/: mod.rs  psp22_reward.rs
ink/verified_artifacts/lucky_raffle/: contract.wasm
ink/verified_artifacts/random_generator/: bundle.contract
ink/verified_artifacts/reward_manager/: bundle.contract
phat/: README.md  rust-toolchain.toml
phat/artifacts/: dapp_staking.contract  dapp_staking.json  lucky_raffle.contract  lucky_raffle.json  lucky_raffle.wasm
phat/artifacts/dapp_staking/: dapp_staking.wasm
phat/artifacts/lucky_raffle/: lucky_raffle.contract  lucky_raffle.json  lucky_raffle.wasm
phat/contracts/dapp_staking/: .env_shibuya  Cargo.toml  README.md  lib.rs
phat/contracts/raffle/: .env_shibuya  Cargo.toml  README.md  lib.rs
phat/contracts/raffle_build_earn_subperiod/: Cargo.toml  lib.rs
phat/js/: package.json
phat/js/artefacts/: raffle.js
phat/js/src/: parseInput.ts  raffle.ts
worker-phala-cloud/: .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  package.json
worker-phala-cloud/.papi/: polkadot-api.json
worker-phala-cloud/.papi/descriptors/: package.json
worker-phala-cloud/.papi/metadata/: astar.scale
worker-phala-cloud/src/: dapp_staking.ts  index.ts  indexer.ts  lucky_raffle.ts  raffle.ts  types.ts  wasm_codec.ts  worker.ts
worker-phala-cloud/test/: constants.ts  dapp_staking.test.ts  indexer.test.ts  lotto_contract.test.ts  lucky_raffle.test.ts  raffle.test.ts  worker.test.ts
