[package]
name = "e2e_tests"
version = "1.0.1"
authors = ["guigou"]
edition = "2021"

[dependencies]
ink = { version = "4.3.0", default-features = false}
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
openbrush = { version = "4.0.0-beta", git = "https://github.com/Brushfam/openbrush-contracts", default-features = false, features = ["ownable", "access_control", "upgradeable"] }
lucky = { path = "../logics", default-features = false }
reward_manager = { path = "../contracts/reward_manager", default-features = false, features = ["ink-as-dependency"] }
dapps_staking_developer = { path = "../contracts/dapps_staking_developer", default-features = false, features = ["ink-as-dependency"] }
raffle_consumer = { path = "../contracts/raffle_consumer", default-features = false, features = ["ink-as-dependency"] }

phat_rollup_anchor_ink = { git = "https://github.com/GuiGou12358/phat-offchain-rollup" , default-features = false}

[dev-dependencies]
ink_e2e = { version = "4.3.0" }
hex-literal = { version = "0.4.1" }
subxt-signer = { version = "0.31.0" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "openbrush/std",
    "lucky/std",
    "reward_manager/std",
    "dapps_staking_developer/std",
    "phat_rollup_anchor_ink/std",
    "raffle_consumer/std",
]
ink-as-dependency = []
e2e-tests = []

[profile.release]
overflow-checks = false

[profile.dev]
overflow-checks = false
