[package]
name = "e2e_tests"
version = "1.0.1"
authors = ["guigou"]
edition = "2021"

[dependencies]
ink = { version = "5.1.1", default-features = false }
inkv5_client_lib = { git = "https://github.com/GuiGou12358/sc-rollup", default-features = false}
lucky = { path = "../logics", default-features = false }
reward_manager = { path = "../contracts/reward_manager", default-features = false, features = ["ink-as-dependency"] }
dapps_staking_developer = { path = "../contracts/dapps_staking_developer", default-features = false, features = ["ink-as-dependency"] }
raffle_consumer = { path = "../contracts/raffle_consumer", default-features = false, features = ["ink-as-dependency"] }

[dev-dependencies]
ink_e2e = { version = "5.1.1" }
hex-literal = { version = "1.0.0" }
subxt-signer = { version = "0.43.0" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "inkv5_client_lib/std",
    "lucky/std",
    "reward_manager/std",
    "dapps_staking_developer/std",
    "raffle_consumer/std",
]
e2e-tests = []

[profile.release]
overflow-checks = false

[profile.dev]
overflow-checks = false
