[package]
name = "raffle_consumer"
version = "3.0.0"
authors = ["guigou"]
edition = "2021"

[dependencies]

ink = { version = "5.1.1", default-features = false }
inkv5_client_lib = { git = "https://github.com/GuiGou12358/sc-rollup", default-features = false}
lucky = { path = "../../logics", default-features = false }
#reward_manager = { path = "../reward_manager", default-features = false, features = ["ink-as-dependency"] }
#dapps_staking_developer = { path = "../dapps_staking_developer", default-features = false, features = ["ink-as-dependency"] }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "inkv5_client_lib/std",
    "lucky/std",
    #"reward_manager/std",
    #"dapps_staking_developer/std",
]
ink-as-dependency = []

[profile.release]
overflow-checks = false

[profile.dev]
overflow-checks = false
