[package]
name = "reward_manager"
version = "1.2.0"
authors = ["guigou"]
edition = "2021"

[dependencies]
ink = { version = "5.1.1", default-features = false }
inkv5_client_lib = { git = "https://github.com/GuiGou12358/sc-rollup", default-features = false}
lucky = { path = "../../logics", default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "inkv5_client_lib/std",
    "lucky/std",
]
ink-as-dependency = []

[profile.release]
overflow-checks = false

[profile.dev]
overflow-checks = false
